# IT2901-25-elfryd

./: DockerFile.nrf  README.md  docker-compose.yml
battery-sensor/: .gitignore  README.md  docker-compose.yml
battery-sensor/backend/: README.md
battery-sensor/broker/: .gitignore  README.md  battery_generator.sh  cleanup.sh  db_monitor.sh  install.sh  mqtt_monitor.sh  restart.sh  seed.sh
battery-sensor/docs/: battery-sensor-project.md  lockbox-project.md
battery-sensor/frontend/: README.md
battery-sensor/git_workflows_move_or_rename/: release_jenk-kystlaget-nrf-booking-api-prod-0001.yml
battery-sensor/nrf/: README.md
battery-sensor/nrf/ble/central/: CMakeLists.txt  README.c  README.md  prj.conf
battery-sensor/nrf/ble/central/ble/: state.go
battery-sensor/nrf/ble/central/i2c/: i2c.go
battery-sensor/nrf/ble/central/src/: connection_pool.c  connection_pool.h  connection_scanner.h  main.c  peripheral_manager.c  peripheral_manager.h  scheduler.c  scheduler.h
battery-sensor/nrf/promicro_nrf52840/peripheral/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  prj.conf
battery-sensor/nrf/promicro_nrf52840/peripheral/boards/: promicro_nrf52840_nrf52840_uf2.overlay
battery-sensor/nrf/promicro_nrf52840/peripheral/src/: adc.c  adc.h  ble.c  ble.h  bluetooth.c  bluetooth.h  bme280.c  bme280.h  led.c  led.h  main.c  mpu6050.c  mpu6050.h  sensor.h
battery-sensor/nrf/promicro_nrf52840/peripheral/src/sensors/: sensor_adc.c  sensor_bme.c  sensor_mpu.c  uuid.h
battery-sensor/server/: .gitignore
legacy/nRF91-DepositBox/: README.md
(+430 files in other folders)
